--- a/AUTHORS
+++ b/AUTHORS
@@ -8,5 +8,6 @@
 
 # Please keep the list sorted.
 
+Emmanuel Busato <busato@in2p3.fr>
 Peter Waller <p@pwaller.net>
 Sebastien Binet <binet@cern.ch>
