--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@
 
 # Please keep the list sorted.
 
+Bastian Wieck <b.wieck@gmx.de>
 Emmanuel Busato <busato@in2p3.fr>
 Peter Waller <p@pwaller.net>
 Sebastien Binet <binet@cern.ch>
