--- a/AUTHORS
+++ b/AUTHORS
@@ -10,5 +10,6 @@
 
 Bastian Wieck <b.wieck@gmx.de>
 Emmanuel Busato <busato@in2p3.fr>
+Michaël Ughetto <mughetto@cern.ch>
 Peter Waller <p@pwaller.net>
 Sebastien Binet <binet@cern.ch>
