Added self (David Blyth) to author and contributor lists

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@
 # Please keep the list sorted.
 
 Bastian Wieck <b.wieck@gmx.de>
+David Blyth <dblyth@anl.gov>
 Emmanuel Busato <busato@in2p3.fr>
 Michaël Ughetto <mughetto@cern.ch>
 Peter Waller <p@pwaller.net>
