--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,4 @@ Michaël Ughetto <mughetto@cern.ch>
 Mohamed Amine Elgnaoui <mohamed.amine.elgnaoui@gmail.com>
 Peter Waller <p@pwaller.net>
 Sebastien Binet <binet@cern.ch>
+Jay Batra <jaybatra73@gmail.com>
