Adding my name as author and contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,5 +15,6 @@ Emmanuel Busato <busato@in2p3.fr>
 Michaël Ughetto <mughetto@cern.ch>
 Mohamed Amine Elgnaoui <mohamed.amine.elgnaoui@gmail.com>
 Peter Waller <p@pwaller.net>
+Romain Madar <romain.madar@cern.ch>
 Sebastien Binet <binet@cern.ch>
 Jay Batra <jaybatra73@gmail.com>
