A+C: add Ingo Müller

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ Bastian Wieck <b.wieck@gmx.de>
 CERN
 David Blyth <dblyth@anl.gov>
 Emmanuel Busato <busato@in2p3.fr>
+Ingo Müller <ingo.mueller@inf.ethz.ch>
 Michaël Ughetto <mughetto@cern.ch>
 Mohamed Amine Elgnaoui <mohamed.amine.elgnaoui@gmail.com>
 Peter Waller <p@pwaller.net>
