--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@ CERN
 David Blyth <dblyth@anl.gov>
 Emmanuel Busato <busato@in2p3.fr>
 Ingo Müller <ingo.mueller@inf.ethz.ch>
+Joshua Porter <jccporter@gmail.com>
 Michaël Ughetto <mughetto@cern.ch>
 Mohamed Amine Elgnaoui <mohamed.amine.elgnaoui@gmail.com>
 Peter Waller <p@pwaller.net>
