A+C: add Chinmaya Mahesh

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@
 
 Bastian Wieck <b.wieck@gmx.de>
 CERN
+Chinmaya Mahesh <chinmaya.mahesh@disroot.org>
 David Blyth <dblyth@anl.gov>
 Emmanuel Busato <busato@in2p3.fr>
 Ingo Müller <ingo.mueller@inf.ethz.ch>
