--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@ Ingo Müller <ingo.mueller@inf.ethz.ch>
 Joshua Porter <jccporter@gmail.com>
 Michaël Ughetto <mughetto@cern.ch>
 Mohamed Amine Elgnaoui <mohamed.amine.elgnaoui@gmail.com>
+Olivier Mengué <dolmen@cpan.org>
 Peter Waller <p@pwaller.net>
 Romain Madar <romain.madar@cern.ch>
 Sebastien Binet <binet@cern.ch>
