A+C: add Simon Waldherr

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,4 +21,5 @@ Olivier Mengué <dolmen@cpan.org>
 Peter Waller <p@pwaller.net>
 Romain Madar <romain.madar@cern.ch>
 Sebastien Binet <binet@cern.ch>
+Simon Waldherr <git@simon.waldherr.eu>
 Jay Batra <jaybatra73@gmail.com>
